add frozen dependency and wrap

--- a/meson.build
+++ b/meson.build
@@ -9,7 +9,7 @@ project(
   'cpp',
   license: 'MPL-2.0',
 
-  version: '0.19.6',
+  version: '0.19.7',
   default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++20'],
   meson_version: '>=1.1' #last meson version that was tested
 )
@@ -39,6 +39,10 @@ eigen3_dep = dependency('eigen3')
 # fmt for pretty printing
 #fmt_dep = dependency('fmt', static: true, version: 10.0)
 fmt_dep = subproject('fmt', default_options: 'default_library=static').get_variable('fmt_dep')
+
+# frozen constexpr containers
+#fmt_dep = dependency('fmt', static: true, version: 10.0)
+frozen_dep = subproject('frozen', default_options: 'default_library=static').get_variable('frozen_dep')
 
 # indicators for pretty progress bars
 indicators_dep = dependency('indicators', static: true)
