change import style to _cppy

--- a/python/meson.build
+++ b/python/meson.build
@@ -7,12 +7,17 @@ sources = [
     'themachinethatgoesping/tools/__init__.py',
     'themachinethatgoesping/tools/timeconv.py',
 
+    'themachinethatgoesping/scripts/__init__.py',
     'themachinethatgoesping/scripts/oceanographic.py',
     'themachinethatgoesping/scripts/plot_tools.py',
     'themachinethatgoesping/scripts/read_xcf.py',
     'themachinethatgoesping/scripts/sbes.py',
     'themachinethatgoesping/scripts/mbes.py',
 ]
+
+init_configuration = configuration_data({
+    'PROJECT_VERSION' : meson.project_version(),
+})
 
 if get_option('build_pythonmodule').enabled()
     
@@ -27,7 +32,23 @@ if get_option('build_pythonmodule').enabled()
             endforeach
             pth = '/'.join(fields)
 
+            # TODO: Not yet possible because of https://github.com/mesonbuild/meson/issues/2320
+            # __init__.py may need configuration
+            # if source.split('/')[-1] == '__init__.py'
+            #     configure_file(
+            #         input: source,
+            #         output: pth / '__init__.py',
+            #         configuration: init_configuration,
+            #         install: true,
+            #         install_dir: pymod.get_install_dir() / pth,
+            #         install_tag: 'python-runtime'
+            #     )
+            # else
+            #     pymod.install_sources(source, subdir: pth, install_tag: 'python-runtime')
+            # endif
+
             pymod.install_sources(source, subdir: pth, install_tag: 'python-runtime')
+                
         endforeach
 
     endif
