try fixing openmp on windows

--- a/meson.build
+++ b/meson.build
@@ -20,7 +20,8 @@ projectnamespace = 'themachinethatgoesping'
 
 # system
 if meson.get_compiler('cpp').get_id() == 'clang-cl'
-  omp_dep = declare_dependency()
+  omp = meson.get_compiler('cpp').find_library('omp')
+  omp_dep = declare_dependency(link_with: omp)
 else
   omp_dep = dependency('openmp')
 endif
