--- a/meson.build
+++ b/meson.build
@@ -20,12 +20,7 @@ projectnamespace = 'themachinethatgoesping'
 
 # system
 if meson.get_compiler('cpp').get_id() == 'clang-cl'
-  omp = dependency('openmp')
-  libomp = meson.get_compiler('cpp').find_library('libomp')
-  omp_dep = declare_dependency(
-  dependencies : [omp, libomp],
-  #link_with : [libomp]
-  )
+  omp_dep = declare_dependency()
 else
   omp_dep = dependency('openmp')
 endif
