--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -8,33 +8,63 @@ headerdir = projectnamespace + '/tools'
 
 # -- source files --
 sources = [
-  'timeconv.cpp'
+  'timeconv.cpp',
 ]
 
 headers = [
-  'timeconv.hpp',
-  'helper.hpp',
   'hashhelper.hpp',
-  'helper/defaultmap.hpp',
-  'helper/defaultsharedpointermap.hpp',
-  'pyhelper/pyindexer.hpp',
+  'helper.hpp',
+  'progressbars.hpp',
+  'timeconv.hpp',
+  'vectorinterpolators.hpp',
   'classhelper/objectprinter.hpp',
   'classhelper/stream.hpp',
-  'rotationfunctions/quaternions.hpp',
-  'rotationfunctions/helper.hpp',
-  'vectorinterpolators.hpp',
+  'classhelper/xxhashhelper.hpp',
+  'classhelper/.docstrings/objectprinter.doc.hpp',
+  'classhelper/.docstrings/stream.doc.hpp',
+  'classhelper/.docstrings/xxhashhelper.doc.hpp',
+  'vectorinterpolators/akimainterpolator.hpp',
   'vectorinterpolators/i_interpolator.hpp',
+  'vectorinterpolators/i_pairinterpolator.hpp',
   'vectorinterpolators/linearinterpolator.hpp',
   'vectorinterpolators/nearestinterpolator.hpp',
-  'vectorinterpolators/akimainterpolator.hpp',
   'vectorinterpolators/slerpinterpolator.hpp',
-  'progressbars.hpp',
-  'progressbars/i_progressbar.hpp',
-  'progressbars/noindicator.hpp',
-  'progressbars/progressindicator.hpp',
+  'vectorinterpolators/.docstrings/akimainterpolator.doc.hpp',
+  'vectorinterpolators/.docstrings/i_interpolator.doc.hpp',
+  'vectorinterpolators/.docstrings/i_pairinterpolator.doc.hpp',
+  'vectorinterpolators/.docstrings/linearinterpolator.doc.hpp',
+  'vectorinterpolators/.docstrings/nearestinterpolator.doc.hpp',
+  'vectorinterpolators/.docstrings/slerpinterpolator.doc.hpp',
+  '.docstrings/hashhelper.doc.hpp',
+  '.docstrings/helper.doc.hpp',
+  '.docstrings/progressbars.doc.hpp',
+  '.docstrings/timeconv.doc.hpp',
+  '.docstrings/vectorinterpolators.doc.hpp',
+  'rotationfunctions/helper.hpp',
+  'rotationfunctions/quaternions.hpp',
+  'rotationfunctions/.docstrings/helper.doc.hpp',
+  'rotationfunctions/.docstrings/quaternions.doc.hpp',
+  'pch/pch.hpp',
+  'pyhelper/pyindexer.hpp',
+  'pyhelper/.docstrings/pyindexer.doc.hpp',
   'progressbars/consoleprogressbar.hpp',
+  'progressbars/i_progressbar.hpp',
+  'progressbars/i_progressbartimed.hpp',
+  'progressbars/noindicator.hpp',
+  'progressbars/progressbarchooser.hpp',
+  'progressbars/progressindicator.hpp',
   'progressbars/progresstqdm.hpp',
-  'progressbars/progressbarchooser.hpp'
+  'progressbars/.docstrings/consoleprogressbar.doc.hpp',
+  'progressbars/.docstrings/i_progressbar.doc.hpp',
+  'progressbars/.docstrings/i_progressbartimed.doc.hpp',
+  'progressbars/.docstrings/noindicator.doc.hpp',
+  'progressbars/.docstrings/progressbarchooser.doc.hpp',
+  'progressbars/.docstrings/progressindicator.doc.hpp',
+  'progressbars/.docstrings/progresstqdm.doc.hpp',
+  'helper/defaultmap.hpp',
+  'helper/defaultsharedpointermap.hpp',
+  'helper/.docstrings/defaultmap.doc.hpp',
+  'helper/.docstrings/defaultsharedpointermap.doc.hpp',
 ]
 
 # -- targets --
