--- a/meson.build
+++ b/meson.build
@@ -11,7 +11,7 @@ project(
 
   version: '0.22.1',
   default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++20'],
-  meson_version: '>=1.1' #last meson version that was tested
+  meson_version: '>=1.3.2' #first version with  clang-cl openmp support
 )
 
 projectnamespace = 'themachinethatgoesping'
@@ -19,13 +19,7 @@ projectnamespace = 'themachinethatgoesping'
 # --- dependencies ---
 
 # system
-if meson.get_compiler('cpp').get_id() == 'clang-cl'
-  libomp = meson.get_compiler('cpp').find_library('libomp')
-  omp_dep = declare_dependency(
-  compile_args : ['-fopenmp'],
-  dependencies : [libomp]
-  )
-elif  meson.get_compiler('cpp').get_id() == 'clang'
+if  meson.get_compiler('cpp').get_id() == 'clang'
   # libomp = meson.get_compiler('cpp').find_library('libomp5')
   # omp_dep = declare_dependency(
   # compile_args : ['-fopenmp'],
