test default openmp dependency clang-cl windows

--- a/meson.build
+++ b/meson.build
@@ -20,11 +20,7 @@ projectnamespace = 'themachinethatgoesping'
 
 # system
 if meson.get_compiler('cpp').get_id() == 'clang-cl'
-  libomp = meson.get_compiler('cpp').find_library('libomp')
-  omp_dep = declare_dependency(
-  compile_args : ['-fopenmp'],
-  dependencies : [libomp]
-  )
+  omp_dep = dependency('openmp')
 elif  meson.get_compiler('cpp').get_id() == 'clang'
   # libomp = meson.get_compiler('cpp').find_library('libomp5')
   # omp_dep = declare_dependency(
