--- a/meson.build
+++ b/meson.build
@@ -9,7 +9,7 @@ project(
   'cpp',
   license: 'MPL-2.0',
 
-  version: '0.22.1',
+  version: '0.22.2',
   default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++20'],
   meson_version: '>=1.3.2' #first version with  clang-cl openmp support
 )
@@ -20,7 +20,8 @@ projectnamespace = 'themachinethatgoesping'
 
 # system
 if meson.get_compiler('cpp').get_id() == 'clang-cl'
-  omp_dep = dependency('openmp')
+  #omp_dep = dependency('openmp')
+  omp_dep = declare_dependency()
 elif  meson.get_compiler('cpp').get_id() == 'clang'
   # libomp = meson.get_compiler('cpp').find_library('libomp5')
   # omp_dep = declare_dependency(
