replaced stringstream in from_binary with isviewstream for better performance (no copying)

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -65,8 +65,10 @@ headers = [
   'progressbars/.docstrings/progresstqdm.doc.hpp',
   'helper/defaultmap.hpp',
   'helper/defaultsharedpointermap.hpp',
+  'helper/isviewstream.hpp',
   'helper/.docstrings/defaultmap.doc.hpp',
   'helper/.docstrings/defaultsharedpointermap.doc.hpp',
+  'helper/.docstrings/isviewstream.doc.hpp',
 ]
 
 # -- targets --
