--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -264,6 +264,11 @@ jobs:
       with:
         submodules: recursive
         lfs: false
+
+    - name: ccache
+      uses: hendrikmuhs/ccache-action@v1.2
+      with:
+        key: super-ci-mac  # name for the cache
         
     # install clang 15
     - run: brew install coreutils llvm@17
