--- a/meson.build
+++ b/meson.build
@@ -28,7 +28,7 @@ elif  meson.get_compiler('cpp').get_id() == 'clang'
   # compile_args : ['-fopenmp'],
   # dependencies : [libomp]
   # )
-  omp_dep = dependency('openmp')
+  omp_dep = declare_dependency()
 else
   omp_dep = dependency('openmp')
 endif
