--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -52,12 +52,12 @@ concurrency:
 jobs:
   macos:
     name: ci on macOS
-    runs-on: macos-14
+    runs-on: ["macos-12", "macos-14", "macos-14-arm64","macos-13", "macos-13-arm64"]  
     strategy:
       fail-fast: false
       matrix:
-        cxx_compiler: ["$(brew --prefix llvm@18)/bin/clang++"]            
-    
+        cxx_compiler: ["$(brew --prefix llvm@18)/bin/clang++"]  
+                
     # env does not work here because is resolved as string and not command 
     # env:
     #   CXX: ${{ matrix.cxx_compiler }}
