--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -13,6 +13,8 @@ on:
       - '.github/workflows/cibuildwheels*'
       - '.github/workflows/conda*'
       - '.github/workflows/test_*'
+      - '.github/workflows/ci-linux*'
+      - '.github/workflows/ci-win*'
       - 'conda.recipe/*'
       - '*.md'
       - 'doc/*'
@@ -29,6 +31,8 @@ on:
       - '.github/workflows/cibuildwheels*'
       - '.github/workflows/conda*'
       - '.github/workflows/test_*'
+      - '.github/workflows/ci-linux*'
+      - '.github/workflows/ci-win*'
       - 'conda.recipe/*'
       - '*.md'
       - 'doc/*'
@@ -52,11 +56,12 @@ concurrency:
 jobs:
   macos:
     name: ci on macOS
-    runs-on: ["macos-12", "macos-14", "macos-14-arm64","macos-13", "macos-13-arm64"]  
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         cxx_compiler: ["$(brew --prefix llvm@18)/bin/clang++"]  
+        os: ["macos-12", "macos-14", "macos-14-arm64","macos-13", "macos-13-arm64"] 
                 
     # env does not work here because is resolved as string and not command 
     # env:
