--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -13,6 +13,8 @@ on:
       - '.github/workflows/cibuildwheels*'
       - '.github/workflows/conda*'
       - '.github/workflows/test_*'
+      - '.github/workflows/ci-linux*'
+      - '.github/workflows/ci-mac*'
       - 'conda.recipe/*'
       - '*.md'
       - 'doc/*'
@@ -29,6 +31,8 @@ on:
       - '.github/workflows/cibuildwheels*'
       - '.github/workflows/conda*'
       - '.github/workflows/test_*'
+      - '.github/workflows/ci-linux*'
+      - '.github/workflows/ci-mac*'
       - 'conda.recipe/*'
       - '*.md'
       - 'doc/*'
