--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -61,7 +61,7 @@ jobs:
       fail-fast: false
       matrix:
         cxx_compiler: ["$(brew --prefix llvm@18)/bin/clang++"]  
-        os: ["macos-12", "macos-14", "macos-14-arm64","macos-13", "macos-13-arm64"] 
+        os: ["macos-12", "macos-13", "macos-14"] 
                 
     # env does not work here because is resolved as string and not command 
     # env:
@@ -102,7 +102,7 @@ jobs:
       run: meson test -C builddir/ --print-errorlogs
 
     - name: install project
-      run: meson install -C builddir/
+      run: sudo meson install -C builddir/
 
     - name: install pip requirements
       run: pip install -r requirements.txt
