--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -61,7 +61,7 @@ jobs:
       fail-fast: false
       matrix:
         cxx_compiler: ["$(brew --prefix llvm@18)/bin/clang++"]  
-        os: ["macos-12", "macos-13", "macos-14"] 
+        os: ["macos-14"] 
                 
     # env does not work here because is resolved as string and not command 
     # env:
