--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -84,6 +84,7 @@ if build_machine.system() != 'linux'
                           magic_enum_dep,
                           xtensor_dep,
                           fast_float_dep,
+                          flat_map_dep,
                           frozen_dep,
                           xxhash_cpp_dep],
                         override_options: [
@@ -104,6 +105,7 @@ else
                           magic_enum_dep,
                           xtensor_dep,
                           fast_float_dep,
+                          flat_map_dep,
                           frozen_dep,
                           xxhash_cpp_dep],
                         override_options: [
@@ -127,6 +129,7 @@ tools_dep = declare_dependency(
     magic_enum_dep,
     xtensor_dep,
     fast_float_dep,
+    flat_map_dep,
     frozen_dep,
     xxhash_cpp_dep
   ],
