--- a/src/meson.build
+++ b/src/meson.build
@@ -16,7 +16,7 @@ endif
 
 # -- tests (catch2) --
 if get_option('build_tests').enabled()
-    catch2 = subproject('catch2', default_options: ['tests=disabled'])
+    catch2 = subproject('catch2', default_options: ['tests=false'])
     catch2 = catch2.get_variable('catch2_with_main_dep')
 
     subdir('tests')
