--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -60,7 +60,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        cxx_compiler: ["$(brew --prefix llvm@18)/bin/clang++"]  
+        cxx_compiler: ["$(brew --prefix llvm@18)/bin/clang++"] 
+        llvm: ["$(brew --prefix llvm@18)"]
         os: ["macos-14"] 
                 
     # env does not work here because is resolved as string and not command 
@@ -97,9 +98,9 @@ jobs:
     - name: configure meson
       run: |
         BOOST_ROOT=/opt/homebrew/Cellar/boost/1.85.0 CXX=${{ matrix.cxx_compiler }} 
-        LDFLAGS="-L/opt/homebrew/opt/llvm/lib/c++ -L/opt/homebrew/opt/llvm/lib -L/opt/homebrew/opt/libomp/lib -Wl,-rpath,/opt/homebrew/opt/llvm/lib/c++"
-        CPPFLAGS="-I/opt/homebrew/opt/llvm/include -I/opt/homebrew/opt/libomp/include"
-        CXX=/opt/homebrew/opt/llvm/bin/clang++
+        LDFLAGS="-L${{ matrix.llvm }}lib/c++ -L${{ matrix.llvm }}lib -L/opt/homebrew/opt/libomp/lib -Wl,-rpath,${{ matrix.llvm }}lib/c++"
+        CPPFLAGS="-I${{ matrix.llvm }}include -I/opt/homebrew/opt/libomp/include"
+        CXX=${{ matrix.llvm }}bin/clang++
         meson setup builddir/; 
         meson configure builddir -Dpython.install_env=auto
 
