--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -97,12 +97,7 @@ jobs:
     # LDFLAGS="-L/opt/homebrew/opt/libomp/lib" CPPFLAGS="-I/opt/homebrew/opt/libomp/include" 
     - name: configure meson
       run: |
-        BOOST_ROOT=/opt/homebrew/Cellar/boost/1.85.0 CXX=${{ matrix.cxx_compiler }} 
-        LDFLAGS="-L${{ matrix.llvm }}lib/c++ -L${{ matrix.llvm }}lib -L/opt/homebrew/opt/libomp/lib -Wl,-rpath,${{ matrix.llvm }}lib/c++"
-        CPPFLAGS="-I${{ matrix.llvm }}include -I/opt/homebrew/opt/libomp/include"
-        CXX=${{ matrix.llvm }}bin/clang++
-        meson setup builddir/; 
-        meson configure builddir -Dpython.install_env=auto
+        BOOST_ROOT=/opt/homebrew/Cellar/boost/1.85.0 CXX=${{ matrix.llvm }}/bin/clang++  LDFLAGS="-L${{ matrix.llvm }}/lib/c++ -L${{ matrix.llvm }}/lib -L/opt/homebrew/opt/libomp/lib -Wl,-rpath,${{ matrix.llvm }}/lib/c++" CPPFLAGS="-I${{ matrix.llvm }}/include -I/opt/homebrew/opt/libomp/include" meson setup builddir/; meson configure builddir -Dpython.install_env=auto
 
     - name: compile project
       run: meson compile -C builddir/
