--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -60,8 +60,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        cxx_compiler: ["$(brew --prefix llvm@18)/bin/clang++"] 
-        llvm: ["$(brew --prefix llvm@18)"]
+        cxx_compiler: ["$(brew --prefix llvm@17)/bin/clang++"] 
+        llvm: ["$(brew --prefix llvm@17)"]
         os: ["macos-14"] 
                 
     # env does not work here because is resolved as string and not command 
@@ -83,12 +83,12 @@ jobs:
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
       with:
-        key: super-ci-mac  # name for the cache
+        key: super-ci-mac-2  # name for the cache
         
     # uninstall clang 15
     - run: brew uninstall llvm@15
 
-    - run: brew install coreutils llvm@18
+    - run: brew install coreutils llvm@17
         
     - run: brew install libomp boost
     
