try adding omp dep to extension module

--- a/src/pymodule/meson.build
+++ b/src/pymodule/meson.build
@@ -29,6 +29,7 @@ py_tools = pymod.extension_module(
     dependencies: [
         tools_dep,
         tools_pybind_dep,
+        omp_dep,
         pybind11_dep,
         python3_dep],
     #link_with : [tools],
