deactivate openmp for windowns/clang-cl

--- a/meson.build
+++ b/meson.build
@@ -18,22 +18,12 @@ projectnamespace = 'themachinethatgoesping'
 
 # --- dependencies ---
 
-# system
-# if meson.get_compiler('cpp').get_id() == 'clang-cl'
-#   #omp_dep = dependency('openmp')
-#   omp_dep = declare_dependency()
-# elif  meson.get_compiler('cpp').get_id() == 'clang'
-#   # libomp = meson.get_compiler('cpp').find_library('libomp5')
-#   # omp_dep = declare_dependency(
-#   # compile_args : ['-fopenmp'],
-#   # dependencies : [libomp]
-#   # )
-#   omp_dep = declare_dependency()
-# else
-#   omp_dep = dependency('openmp')
-# endif
-
-omp_dep = dependency('openmp')
+# openmp (not used in clang-cl / windows)
+if meson.get_compiler('cpp').get_id() == 'clang-cl'
+  omp_dep = declare_dependency()
+else
+  omp_dep = dependency('openmp')
+endif
 
 # extra compiler args when for the tools target
 tools_compile_args = ['-D_USE_MATH_DEFINES', '-fPIC']
