--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -67,6 +67,7 @@ headers = [
   'helper/enum.hpp',
   'helper/isviewstream.hpp',
   'helper/omp_helper.hpp',
+  'helper/xtensor.hpp',
   'helper/.docstrings/defaultmap.doc.hpp',
   'helper/.docstrings/defaultsharedpointermap.doc.hpp',
   'helper/.docstrings/enum.doc.hpp',
