> 0.23.4 - update fast_float -> 6.1.3

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -73,6 +73,7 @@ headers = [
   'helper/.docstrings/enum.doc.hpp',
   'helper/.docstrings/isviewstream.doc.hpp',
   'helper/.docstrings/omp_helper.doc.hpp',
+  'helper/.docstrings/xtensor.doc.hpp',
 ]
 
 # -- targets --
