--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -64,7 +64,7 @@ jobs:
         llvm: ["$(brew --prefix llvm@18)"]
         boost: ["$(brew --prefix boost)"]
         libomp: ["$(brew --prefix libomp)"]
-        os: ["macos-12", "macos-14"] 
+        os: ["macos-12", "macos-14", "macos-15"] 
                 
     # env does not work here because is resolved as string and not command 
     # env:
@@ -88,7 +88,7 @@ jobs:
         key: super-ci-mac-2  # name for the cache
         
     # uninstall clang 15
-    - run: brew uninstall llvm@15
+    #- run: brew uninstall llvm@15
 
     - run: brew install coreutils llvm@18
         
