--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -64,7 +64,7 @@ jobs:
         llvm: ["$(brew --prefix llvm@18)"]
         boost: ["$(brew --prefix boost)"]
         libomp: ["$(brew --prefix libomp)"]
-        os: ["macos-12", "macos-14", "macos-15"] 
+        os: ["macos-12","macos-14","macos-15"]
                 
     # env does not work here because is resolved as string and not command 
     # env:
@@ -99,7 +99,75 @@ jobs:
     # LDFLAGS="-L/opt/homebrew/opt/libomp/lib" CPPFLAGS="-I/opt/homebrew/opt/libomp/include" 
     - name: configure meson
       run: |
-        BOOST_ROOT=${{ matrix.boost }} CXX=${{ matrix.llvm }}/bin/clang++  LDFLAGS="-L${{ matrix.llvm }}/lib/c++ -L${{ matrix.llvm }}/lib -L${{ matrix.boost }}/lib -undefined dynamic_lookup -Wl,-no_fixup_chains -Wl,-dead_strip -Wl,-rpath, ${{ matrix.llvm }}/lib/c++" CPPFLAGS="-I${{ matrix.llvm }}/include -I${{ matrix.boost }}/include" meson setup builddir/; meson configure builddir -Dpython.install_env=auto
+        BOOST_ROOT=${{ matrix.boost }} CXX=${{ matrix.llvm }}/bin/clang++  LDFLAGS="-L${{ matrix.llvm }}/lib/c++ -L${{ matrix.llvm }}/lib -L${{ matrix.boost }}/lib -Wl,-rpath, ${{ matrix.llvm }}/lib/c++" CPPFLAGS="-I${{ matrix.llvm }}/include -I${{ matrix.boost }}/include" meson setup builddir/; meson configure builddir -Dpython.install_env=auto
+
+    - name: compile project
+      run: meson compile -C builddir/
+
+    - name: test (cpp)
+      run: meson test -C builddir/ --print-errorlogs
+
+    - name: install project
+      run: sudo meson install -C builddir/
+
+    - name: install pip requirements
+      run: pip install -r requirements.txt
+
+    - name: test (pytest)
+      run: pytest -v
+      
+    - name: 'Upload error log'
+      uses: actions/upload-artifact@v4
+      if: failure()
+      with:
+        name: ${{matrix.container}}_testlog
+        path: builddir/meson-logs/meson-log.txt
+        retention-days: 5
+
+  macos_arm:
+    name: CI arm ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        boost: ["$(brew --prefix boost)"]
+        libomp: ["$(brew --prefix libomp)"]
+        os: ["macos-14", "macos-15"]
+                
+    env:
+      CXX: "gcc"
+      CC: "gcc" 
+      
+    steps:
+    
+    - uses: actions/setup-python@v3
+      with:
+        python-version: '3.12'
+        
+    - name: checkout main repository
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
+        lfs: false
+
+    - name: ccache
+      uses: hendrikmuhs/ccache-action@v1.2
+      with:
+        key: super-ci-mac-2  # name for the cache
+        
+    # uninstall clang 15
+    #- run: brew uninstall llvm@15
+
+    - run: brew install coreutils llvm@18
+        
+    - run: brew install libomp boost
+    
+    - run: pip install meson meson-python ninja pytest numpy
+    
+    # LDFLAGS="-L/opt/homebrew/opt/libomp/lib" CPPFLAGS="-I/opt/homebrew/opt/libomp/include" 
+    - name: configure meson
+      run: |
+        BOOST_ROOT=${{ matrix.boost }} LDFLAGS="-L${{ matrix.boost }}/lib" CPPFLAGS="-I${{ matrix.boost }}/include" meson setup builddir/; meson configure builddir -Dpython.install_env=auto
 
     - name: compile project
       run: meson compile -C builddir/
