try get clang action

--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -140,6 +140,12 @@ jobs:
     - uses: actions/setup-python@v3
       with:
         python-version: '3.12'
+
+    # - name: Install LLVM and Clang
+    #   uses: KyleMayes/install-llvm-action@v2
+    #   with:
+    #     version: "18.1"
+    #     env: true
         
     - name: checkout main repository
       uses: actions/checkout@v4
