globbing and formatting

--- a/subprojects/packagefiles/xtensor-python/include/meson.build
+++ b/subprojects/packagefiles/xtensor-python/include/meson.build
@@ -4,7 +4,7 @@
 
 # list and install headers
 headers = [
-  'pyarray.hpp',
+  'pytensor.hpp',
   'pyarray_backstrides.hpp',
   'pycontainer.hpp',
   'pynative_casters.hpp',
