--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -28,12 +28,14 @@ headers = [
   'classhelper/.docstrings/stream.doc.hpp',
   'classhelper/.docstrings/xxhashhelper.doc.hpp',
   'vectorinterpolators/akimainterpolator.hpp',
+  'vectorinterpolators/bivectorinterpolator.hpp',
   'vectorinterpolators/i_interpolator.hpp',
   'vectorinterpolators/i_pairinterpolator.hpp',
   'vectorinterpolators/linearinterpolator.hpp',
   'vectorinterpolators/nearestinterpolator.hpp',
   'vectorinterpolators/slerpinterpolator.hpp',
   'vectorinterpolators/.docstrings/akimainterpolator.doc.hpp',
+  'vectorinterpolators/.docstrings/bivectorinterpolator.doc.hpp',
   'vectorinterpolators/.docstrings/i_interpolator.doc.hpp',
   'vectorinterpolators/.docstrings/i_pairinterpolator.doc.hpp',
   'vectorinterpolators/.docstrings/linearinterpolator.doc.hpp',
