--- a/subprojects/.gitignore
+++ b/subprojects/.gitignore
@@ -7,6 +7,7 @@ packagecache/*
 date*
 Catch2*/*
 xxhash*/*
+xxhash_cpp-*
 
 pybind11*/*
 eigen*/*
@@ -20,7 +21,6 @@ xsimd*/*
 xtl*/*
 frozen*/*
 sse2neon*/*
-xxhash_cpp*/*
 
 #git repos
 meta-*
