--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,7 @@ project(
   license: 'MPL-2.0',
 
   version: '0.28.4',
-  default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++20', 'b_lto=true'],
+  default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++20', 'b_lto=true', 'b_lto_mode=thin', 'b_thinlto_cache=true', 'b_staticpic=true'],
   meson_version: '>=1.3.2' #first version with  clang-cl openmp support,
 )
 
@@ -26,7 +26,7 @@ else
 endif
 
 # extra compiler args when for the tools target
-tools_compile_args = ['-D_USE_MATH_DEFINES', '-fPIC', 
+tools_compile_args = ['-D_USE_MATH_DEFINES', 
 #'-march=x86-64-v3',
 #'-mtune=generic',
 #'-funroll-loops'
