--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,7 @@ project(
   license: 'MPL-2.0',
 
   version: '0.28.4',
-  default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++20', 'b_lto=true', 'b_lto_mode=thin', 'b_thinlto_cache=true', 'b_staticpic=true'],
+  default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++20'],
   meson_version: '>=1.3.2' #first version with  clang-cl openmp support,
 )
 
@@ -56,7 +56,7 @@ eigen3_dep = dependency('eigen3', version: '>=3.4', include_type: 'system')
 
 # fmt for pretty printing
 #fmt_dep = dependency('fmt', static: true, version: 10.0)
-fmt_dep = subproject('fmt', default_options: 'default_library=static').get_variable('fmt_dep')
+fmt_dep = subproject('fmt', default_options: ['default_library=static']).get_variable('fmt_dep')
 
 # frozen constexpr containers
 #fmt_dep = dependency('fmt', static: true, version: 10.0)
